--- a/index.html
+++ b/index.html
@@ -372,6 +372,18 @@ h1 {
                 <span class="film-sim">CLASSIC CHROME</span>
             </aside>
         </div>
+        <br>
+        <div class="photo-container">
+            <div class="image-wrapper">
+                <img src="003.jpg" alt="Sample Work" class="main-image">
+            </div>
+
+            <aside class="meta-info">
+                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
+                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="film-sim">CLASSIC CHROME</span>
+            </aside>
+        </div>
         
         <footer>
             <p>&copy; 2026 PHOS LOG. All rights reserved.</p>
