--- a/index.html
+++ b/index.html
@@ -375,7 +375,31 @@ h1 {
         <br>
         <div class="photo-container">
             <div class="image-wrapper">
+                <img src="004.jpg" alt="Sample Work" class="main-image">
+            </div>
+
+            <aside class="meta-info">
+                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
+                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="film-sim">CLASSIC CHROME</span>
+            </aside>
+        </div>
+        <br>
+        <div class="photo-container">
+            <div class="image-wrapper">
                 <img src="003.jpg" alt="Sample Work" class="main-image">
+            </div>
+
+            <aside class="meta-info">
+                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
+                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="film-sim">CLASSIC CHROME</span>
+            </aside>
+        </div>
+        <br>
+        <div class="photo-container">
+            <div class="image-wrapper">
+                <img src="005.jpg" alt="Sample Work" class="main-image">
             </div>
 
             <aside class="meta-info">
