--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             overflow: hidden;
         }
 
-        /* --- LOGO SECTION: å·¦å›ºå®š --- */
+        /* --- LOGO SECTION --- */
         header {
             width: 30%;
             min-width: 300px;
@@ -44,13 +44,12 @@
             text-align: center;
         }
 
-
         .logo-container::after {
             top: 0; left: 0; right: 0; bottom: 0;
             transform: translate(-5px, -5px);
         }
         .tagline-area {
-        margin-top: 40px; /* ロゴとキャッチコピーの間の十分な余白 */
+        margin-top: 40px;
     }
 
     .tagline-main {
@@ -67,8 +66,6 @@
         letter-spacing: 0.6em;
         color: #aaa;
         margin: 15px 0 0 0;
-        /* 中央揃えの補正 */
-        text-indent: 0.6em;
     }
 
 /* --- アニメーション設定の書き換え --- */
