--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@ h1 {
     letter-spacing: 0.8em;
     font-size: 1.2rem;
     margin: 0;
-    text-indent: 0.8em; 
     /* 修正箇所：0.8s, ease-out, 新しいアニメーション名に変更 */
     animation: slideBlurIn 0.8s ease-out forwards;
 }
@@ -136,7 +135,7 @@ h1 {
             overflow-x: hidden;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 30px;
             box-sizing: border-box;
         }
 
@@ -346,8 +345,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/4.5 1/800s ISO 320</span>
                 <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -358,8 +357,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/6.3 1/80s ISO 12800</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -370,8 +369,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/3.5 1/125s ISO 640</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -382,8 +381,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/4.3 1/450s ISO 320</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -394,8 +393,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/6.3 1/60s ISO 12800</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -406,8 +405,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XF23mmF2 R WR</span>
-                <span class="setting">f/2.8 1/125s ISO 160</span>
+                <span class="spec">NIKON 1 J2/ 1 NIKKOR VR 10-30mm</span>
+                <span class="setting">f/3.5 1/320s ISO 100</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
