Increase left sidebar width from 30% to 380px

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
         /* --- LOGO SECTION --- */
         header {
-            width: 30%;
-            min-width: 300px;
+width: 380px;            min-width: 380px;
             display: flex;
             align-items: center;
             justify-content: center;
