--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         /* --- LOGO SECTION --- */
         header {
-width: 380px;            min-width: 380px;
+            width: 30%;
+            min-width: 300px;
             display: flex;
             align-items: center;
             justify-content: center;
