--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@ h1 {
             </div>
 
             <aside class="meta-info">
-                <span class="spec">X-T30 III / XC15-45mm</span>
-                <span class="setting">f/6.3 1/80s ISO 12800</span>
+                <span class="spec">NIKON 1 J2/ 1 NIKKOR VR 10-30mm</span>
+                <span class="setting">f/1.8 1/200s ISO 3200</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
@@ -407,6 +407,17 @@ h1 {
             <aside class="meta-info">
                 <span class="spec">NIKON 1 J2/ 1 NIKKOR VR 10-30mm</span>
                 <span class="setting">f/3.5 1/320s ISO 100</span>
+                 <!-- <span class="film-sim">CLASSIC CHROME</span> -->
+            </aside>
+        </div>
+        <div class="photo-container">
+            <div class="image-wrapper">
+                <img src="006.jpg" alt="Sample Work" class="main-image">
+            </div>
+
+            <aside class="meta-info">
+                <span class="spec">X-T30 III / XC15-45mm</span>
+                <span class="setting">f/6.3 1/80s ISO 12800</span>
                  <!-- <span class="film-sim">CLASSIC CHROME</span> -->
             </aside>
         </div>
