Change subtitle from "ストリートフォト・アーカイブ" to "写真記念館"

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ h1 {
             <h1><img src="logo.svg" alt="Sample Work" width="240" height="64"></h1>
             <div class="tagline-area">
                 <p class="tagline-main">VISUAL STORIES</p>
-                <p class="tagline-sub">ストリートフォト・アーカイブ</p>
+                <p class="tagline-sub">写真記念館</p>
             </div>
         </div>
     </header>
